...
                    .buttonStyle(.bouncy)
                    
                    Spacer()
                    
                    // Admin Button
                    NavigationLink(destination: AdminLoginView()) {
                        Text("I am Admin")
                            .font(.system(size: 18, design: .rounded))
                            .foregroundColor(.gray)
                            .padding()
                            .background(
                                Capsule()
                                    .stroke(Color.gray, lineWidth: 1)
...
